feat: polish final technical submission
